# GEMSrun

./: .gitignore  MANIFEST.in  Makefile  ReadMe.md  pyproject.toml
.claude/: settings.local.json
gemsrun/: __init__.py  main.py
gemsrun/gui/: 0_convert_qrc_to_py.sh  0_convert_ui_to_py.sh  0_process_ui_files.py  gemscolors.py  infowindow.py  mainwindow.py  paramdialog.py  paramdialog.ui  parawindow.py  transition_clip.py  uiutils.py  viewpanel.py  viewpanelobjects.py  viewpanelutils.py
gemsrun/resources/images/appicon/: generate_icons.py
gemsrun/session/: sessionsetup.py  version.py
gemsrun/uiinfo/: actionmethodinfo.py  generate_available_actions.py
gemsrun/utils/: apputils.py  audiocache.py  audioutils.py  gemsutils.py  polygon_utils.py  safestrfunc.py  ttsutils.py
