# To install deps from toml
# -------------------------
# > make install

# NOTE: Fix PySide6 xcb plugin error on linux by installing: sudo apt install libxcb-cursor0

[build-system]
requires = [
  "setuptools>=61.0.0",  # for PEP 621 metadata support (fully pyproject.toml projects only)
  "wheel"                # any recent wheel
]
build-backend = "setuptools.build_meta"

[project]
name = "GEMSrun"
description = "Environment Runner for GEMS (Graphical Environment Management System)"
version = "2025.11.18.9"
authors = [{name = "Travis L. Seymour, PhD", email = "nogard@ucsc.edu"}]
license = {text = "GPLv3"}
readme = "ReadMe.md"
requires-python = ">=3.11"
keywords = ["VR", "graphical", "environment", "runner"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent"
]

dependencies = [
  "loguru>=0.7.3,<1.0.0",
  "certifi>=2024.12.20,<2026.0.0",
  "PySide6>=6.8.2,<7.0.0",  # was 6.9.0,<7.0.0
  "PyYAML>=6.0.2,<7.0.0",
  "gTTS>=2.5.4,<3.0.0",
  "pillow>=11.2.1,<12.0.0",
  "regex>=2025.11.3,<2026.0.0",
  "platformdirs>=4.3.7,<5.0.0",
  "munch>=4.0.0,<5.0.0",
  "playsound3>=3.0.0,<4.0.0",
]

[project.urls]
"Bug Tracker" = "https://github.com/travisseymour/GEMSrun/issues"
"Documentation" = "https://github.com/travisseymour/GEMSrun#readme"

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5,<9.0.0",
  "black>=25.1.0,<26.0.0",
  "ruff>=0.11.6,<1.0.0",
  "build>=1.2.2.post1,<2.0.0",
  "plumbum>=1.9.0,<2.0.0",
]

[project.gui-scripts]
gemsrun = "gemsrun.main:main"
GEMSrun = "gemsrun.main:main"

[project.scripts]
gemsrun_debug = "gemsrun.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["gemsrun*"]

# pull in any files in the resources folder for use with importlib.resources
[tool.setuptools]
include-package-data = true

[tool.black]
line-length = 120

# ==========================
# Ruff configuration
# ==========================

[tool.ruff]
target-version = "py311"
line-length = 120

# ==========================
# Ruff configuration
# ==========================

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "W",   # pycodestyle warnings
  "I",   # isort (imports)
  "B",   # flake8-bugbear
  "UP",  # pyupgrade
  "N",   # pep8-naming
]
ignore = [
  "E501",  # line length (let formatter enforce; uncomment to ignore)
  "F821",  # undefined name
  "F841",  # assigned but unused variable
  "E722",  # bare except
]

# Things you want reported but not auto-fixed:
unfixable = [
  "F401",  # unused imports: show them, but do not let Ruff auto-delete
]

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true


# ==========================
# Pyright configuration
# (Pyright >= 1.1.311 can read this)
# ==========================
[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"  # "strict"

# Paths where your main code lives
include = [
  "gemsrun",
]

exclude = [
  "**/__pycache__",
  ".venv",
  "build",
  "dist",
  ".mypy_cache",
  ".pytest_cache",
  "compiled_modules",
]

# If you use a local venv:
venvPath = "/home/nogard/GLOBALVENVS/"
venv = "GEMSrun"

# Avoid going crazy over unknown 3rd-party types:
# reportMissingTypeStubs = "warning"
# reportUnknownMemberType = "warning"
# reportUnknownArgumentType = "warning"
# reportUnknownVariableType = "warning"
# reportUnknownParameterType = "warning"

useLibraryCodeForTypes = true

# pyright is being too noisy
reportUnknownParameterType = "none"
reportUnknownArgumentType = "none"
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"
reportUnknownLambdaType = "none"
